# ModbusRTU-pico

./: .gitignore  CMakeLists.txt  COMPILE.md  README.md  firmware.c  master.py
liblightmodbus/liblightmodbus-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
liblightmodbus/liblightmodbus-subbuild/liblightmodbus-populate-prefix/src/liblightmodbus-populate-stamp/: liblightmodbus-populate-gitclone-lastrun.txt
liblightmodbus/liblightmodbus-subbuild/liblightmodbus-populate-prefix/tmp/: liblightmodbus-populate-gitclone.cmake  liblightmodbus-populate-gitupdate.cmake
ligthmodbus/: base.h  lightmodbus.h  slave.h  slave_func.h  slave_func.impl.h
